fixed profile overflow and added picture connection to modal

--- a/src/styles/profileDiv.css
+++ b/src/styles/profileDiv.css
@@ -1,7 +1,6 @@
 .avatar-wrapper {
   position: relative;
   height: 50vh;
-  overflow: hidden;
 }
 
 .avatar-bg {
